Prevent jumping content by always showing a scrollbar

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 
+html {
+  overflow-y: scroll;
+}
+
 .app__toast-wrapper {
   z-index: 1;
 }
